# MondaySDK

./: .flake8  .gitignore  LICENSE.txt  README.md  dev_server.py  pyproject.toml
demos/: basic_usage.py
demos/tests/: test_api.py
docs/: .$monday_api.drawio.bkp  monday_api.drawio
graphql/mutations/: create_production_role.graphql
graphql/queries/: get_column_value.graphql
monday_sdk/: __init__.py  action.py  authentication.py  client.py  common.py  controller.py  fields.py  graphql_loader.py  monday.py  service.py  utils.py  workflow.py
tests/: app.py  test_api.py  test_client.py  test_main.py  test_run.py
